--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,17 @@
             android:name=".ui.ListActivity.ListActivity"
             android:label="@string/title_activity_list"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.view_days.DayViewActivity" />
-        <activity android:name=".ui.view_weeks.WeeksViewActivity" />
-        <activity android:name=".ui.view_product_profile.ProductProfileActivity" />
         <activity
-            android:name=".ui.add_meal.MealPlanActivity"
-            android:parentActivityName=".ui.add_day.DayPlanActivity" />
-        <activity android:name=".ui.add_day.DayPlanActivity" />
-        <activity android:name=".ui.add_week.WeekActivity" />
+            android:name=".ui.view_product_profile.ProductProfileActivity"
+            android:label="@string/title_activity_list"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.planMeal.MealPlanActivity"
+            android:parentActivityName=".ui.planDay.DayPlanActivity" />
+        <activity android:name=".ui.planDay.DayPlanActivity" />
+        <activity android:name=".ui.planWeek.WeekActivity" />
+        <activity
+            android:name=".ui.mainActivity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
