--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     //images slider
     implementation 'com.github.smarteist:autoimageslider:1.3.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
