recipes 1 connect firebase add 20 item add frag recipes java , xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TempActivity"></activity>
+        <activity android:name=".TempActivity" />
         <activity
             android:name=".ui.ListActivity.ListActivity"
             android:label="@string/title_activity_list"
@@ -26,8 +26,7 @@
         <activity android:name=".ui.planDay.DayPlanActivity" />
         <activity android:name=".ui.planWeek.WeekActivity" />
         <activity
-            android:name=".ui.mainActivity.MainActivity"
-            android:label="@string/app_name"
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +34,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.mainActivity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
