--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    //circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
@@ -56,4 +58,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
