--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,30 +5,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_app"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.recipe_profile.RecipesProfileActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".TempActivity" />
-        <activity
-            android:name=".ui.ListActivity.ListActivity"
-            android:label="@string/title_activity_list"
-            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".ui.product_profile.ProductProfileActivity"
             android:label="@string/title_activity_list"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ui.planMeal.MealPlanActivity"
-            android:parentActivityName=".ui.planDay.DayPlanActivity" />
-        <activity android:name=".ui.planDay.DayPlanActivity" />
+        <activity android:name=".ui.planMeal.MealPlanActivity" />
         <activity android:name=".ui.planWeek.WeekActivity" />
         <activity
             android:name=".ui.splash.SplashActivity"
