--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // floating button set of popup bottoms
+    implementation 'com.github.clans:fab:1.6.2'
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
@@ -58,5 +60,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
