--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_app"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.market.MarketActivity"></activity>
         <activity
             android:name=".ui.recipe_profile.RecipesProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.product_profile.ProductProfileActivity"
             android:label="@string/title_activity_list"
